--- a/Blog.Admin/Views/Shared/_Matrix.cshtml
+++ b/Blog.Admin/Views/Shared/_Matrix.cshtml
@@ -53,7 +53,7 @@
     <div id="sidebar">
         <a href="#" class="visible-phone"><i class="icon icon-home"></i> Dashboard</a>
         <ul>
-            <li class="active"><a href="/Manage/DashBoard"><i class="icon icon-home"></i> <span>Dashboard</span></a> </li>
+            <li class="active"><a href="/Blog/DashBoard"><i class="icon icon-home"></i> <span>Dashboard</span></a> </li>
             <li><a href="/Blog/NewFeed"><i class="icon icon-star"></i> <span> New Feed</span></a> </li>
             <li><a href="/Blog/Category"><i class="icon icon-folder-open"></i> <span> Category</span></a> </li>
             <li><a href="/Blog/Profile"><i class="icon icon-user"></i> <span> Profile</span></a></li>
