--- a/Blog.Admin/Views/Shared/_Matrix.cshtml
+++ b/Blog.Admin/Views/Shared/_Matrix.cshtml
@@ -11,7 +11,8 @@
 <body>
     <!--Header-part-->
     <div id="header">
-        <h1><a href="dashboard.html">Matrix Admin</a></h1>
+        <img src="~/Img/demo/av2.jpg" alt="#" title="avatar" />
+        @*<h1><a href="dashboard.html">Matrix Admin</a></h1>*@
     </div>
     <!--close-Header-part-->
     <!--top-Header-menu-->
@@ -65,7 +66,7 @@
             <li class="submenu">
                 <a href="#"><i class="icon icon-cog"></i> <span>Settings</span> <span class="label label-important">1</span></a>
                 <ul>
-                    <li><a href="error403.html">Theme</a></li>
+                    <li><a href="/Blog/Setting">Theme</a></li>
                 </ul>
             </li>
             <li class="content">
