--- a/Blog.Admin/Areas/Blog/Views/DashBoard/DashBoard.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/DashBoard/DashBoard.cshtml
@@ -3,6 +3,11 @@
     ViewBag.Title = "DashBoard";
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> </div>
+</div>
+<!--End-breadcrumbs-->
 
 <!--Action boxes-->
 <div class="container-fluid">
