--- a/Blog.Category/Areas/Blog/Views/Category/Category.cshtml
+++ b/Blog.Category/Areas/Blog/Views/Category/Category.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i>DashBoard</a> <a href="/Blog/Category" class="current">Category</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>Category Test</h2>
 
