--- a/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
+++ b/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Users" class="current">Users</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>Users Test</h2>
 
