--- a/Blog.Activity/Areas/Blog/Views/Activity/Activity.cshtml
+++ b/Blog.Activity/Areas/Blog/Views/Activity/Activity.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Activity" class="current">Activity</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>Activity Test</h2>
 
