--- a/Blog.Admin/Areas/Blog/Views/Post/Post.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Post/Post.cshtml
@@ -4,5 +4,12 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Post" class="current">Post</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
+
 <h2>Post Test</h2>
 
