--- a/Blog.NewFeed/Areas/Blog/Views/NewFeed/NewFeed.cshtml
+++ b/Blog.NewFeed/Areas/Blog/Views/NewFeed/NewFeed.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/NewFeed" class="current">NewFeed</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>NewFeed Test</h2>
 
