--- a/Blog.Profile/Areas/Blog/Views/Profile/ProfileAuth.cshtml
+++ b/Blog.Profile/Areas/Blog/Views/Profile/ProfileAuth.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Profile" class="current">Profile</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>ProfileAuth Test</h2>
 
