--- a/Blog.Setting/Areas/Blog/Views/Setting/Setting.cshtml
+++ b/Blog.Setting/Areas/Blog/Views/Setting/Setting.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Setting" class="current">Setting</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>Setting Test</h2>
 
