--- a/Blog.Admin/Views/Error/Error405.cshtml
+++ b/Blog.Admin/Views/Error/Error405.cshtml
@@ -17,7 +17,7 @@
                         <h1>405</h1>
                         <h3>Something is wrong here. Method not allowed!</h3>
                         <p>Access to this page is forbidden</p>
-                        <a class="btn btn-warning btn-big" href="index.html">Back to Home</a>
+                        <a class="btn btn-warning btn-big" href="/Home/Index">Back to Home</a>
                     </div>
                 </div>
             </div>
