--- a/Blog.Admin/Assets/css/matrix-login.css
+++ b/Blog.Admin/Assets/css/matrix-login.css
@@ -42,7 +42,7 @@ hr{ border-top-color:#dadada;}
 body { background-color:#2E363F;    padding: 0;    margin-top:10%;}
 #logo, #loginbox {    width: 32%;    margin-left: auto;    margin-right: auto;    position: relative;}
 #logo img {  margin: 0 auto;    display: block;}
-#loginbox { overflow: hidden !important;    text-align: left;    position: relative; }
+#loginbox { overflow: hidden !important;    text-align: center;    position: relative; }
 #loginbox form{ width:100%; background:#2E363F; position:relative; top:0; left:0; }
 #loginbox .form-actions { padding: 14px 20px 15px;}
 #loginbox .form-actions .pull-left { margin-top:0px;}
@@ -56,6 +56,25 @@ body { background-color:#2E363F;    padding: 0;    margin-top:10%;}
 #loginbox .control-group{ padding:20px 0; margin-bottom:0px;}
 .form-vertical, .form-actions {  margin-bottom: 0; background:none; border-top:1px solid #3f4954; }
 #loginbox .normal_text{ padding:15px 10px; text-align:center; font-size:14px; line-height:20px; background:#2E363F; color:#fff; }
+    span.field-validation-error.text-danger {
+        color: darkorange;
+        float: left;
+        margin-left: 5em;
+    }
+
+    .validation-summary-errors {
+        display: inline-block;
+    }
+
+        .validation-summary-errors ul {
+            list-style: none;
+        }
+
+            .validation-summary-errors ul li {
+                color: darkorange;
+                float: left;
+                margin-left: 5em;
+            }
 @media (max-width:800px){
 #logo { width: 60%; }
 #loginbox{ width:80%}
