--- a/Blog.Admin/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Blog.Admin/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,11 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
+    Layout = "~/Views/Shared/_Login.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div id="loginbox">
+    <p class="normal_text">Một Email xác nhận đã được gửi đến địa chỉ <span style="color:burlywood; font-weight:bold;">@ViewBag.Email</span>. Hãy kiểm tra hộp thư của bạn để hoàn tất xác nhận mật khẩu</p>
+
+    <span><a href="/Account/Login" class="flip-link btn btn-success" id="to-login2">&laquo; Quay lại trang đăng nhập</a></span>
 </div>
 	
