--- a/Blog.Admin/Views/Account/Register.cshtml
+++ b/Blog.Admin/Views/Account/Register.cshtml
@@ -1,41 +1,57 @@
 ﻿@model Blog.Admin.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Login.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", value = "hoangbap1595@gmail.com" })
+<div id="loginbox">
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-vertical", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="control-group normal_text"> <h3><img src="~/Img/logo.png" alt="Logo" /></h3></div>
+        <div class="control-group">
+            <div class="controls">
+                <div class="main_input_box">
+                    <span class="add-on bg_lo"><i class="icon-user"></i></span>
+                    @Html.TextBoxFor(m => m.Username, new { placeholder = "Username" })
+                    <br />@Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", value = "Omega@111"})
+        <div class="control-group">
+            <div class="controls">
+                <div class="main_input_box">
+                    <span class="add-on bg_lo"><i class="icon-user"></i></span>
+                    @Html.TextBoxFor(m => m.Email, new { value = "hoangbap1595@gmail.com", placeholder = "E-mail address" })
+                    <br />@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", value = "Omega@111" })
+        <div class="control-group">
+            <div class="controls">
+                <div class="main_input_box">
+                    <span class="add-on bg_lo"><i class="icon-lock"></i></span>
+                    @Html.PasswordFor(m => m.Password, new { value = "Omega@111", placeholder = "Password" })
+                    <br />@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                 </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div class="control-group">
+            <div class="controls">     
+                <div class="main_input_box">
+                    <span class="add-on bg_lo"><i class="icon-lock"></i></span>
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { value = "Omega@111", placeholder = "Confirm Password" })
+                    <br />@Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
-    </div>
-}
-
+            @*@Html.ValidationSummary()*@
+            <div class="form-actions">
+                <span class="pull-left"><a href="/Account/Login" class="flip-link btn btn-success" id="to-login2">&laquo; Quay lại</a></span>
+                <span class="pull-right"><button class="btn btn-info" type="submit">Đăng ký</button></span>
+            </div>
+    }
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
