--- a/Blog.Admin/Areas/Blog/Views/Users/Users.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Users/Users.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits System.Web.Mvc.WebViewPage
 @{
-    ViewBag.Title = "ProfileAuth";
+    ViewBag.Title = "Users";
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 <style>
@@ -16,9 +16,9 @@
         clear: both;
     }
 </style>
- <!--breadcrumbs-->
+<!--breadcrumbs-->
 <div id="content-header">
-    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Profile" class="current">Profile</a> </div>
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Users" class="current">Users</a> </div>
 </div>
 <!--End-breadcrumbs-->
 
@@ -86,7 +86,7 @@
                         <div class="control-group">
                             <label class="control-label">Tên:</label>
                             <div class="controls">
-                                <input type="text" class="span11" />
+                                <input type="text" class="span11"  />
                             </div>
                         </div>
                         <div class="control-group">
@@ -98,7 +98,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="control-group">
                             <label class="control-label">Địa chỉ 1</label>
                             <div class="controls">
@@ -120,4 +119,3 @@
     </form>
     <!--End Form 1-->
 </div>
-
