--- a/Blog.Admin/Areas/Blog/Views/Category/Category.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Category/Category.cshtml
@@ -3,12 +3,143 @@
     ViewBag.Title = "Category";
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
-
- <!--breadcrumbs-->
+<!--breadcrumbs-->
 <div id="content-header">
-    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Category" class="current">Category</a> </div>
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i>DashBoard</a> <a href="/Blog/Category" class="current">Category</a> </div>
 </div>
 <!--End-breadcrumbs-->
-
-<h2>Category Test</h2>
+<div class="widget-box">
+    <div class="widget-title">
+        <span class="icon"><i class="icon-th"></i></span>
+        <h5>Data table</h5>
+    </div>
+    <div class="widget-content nopadding">
+        <table class="table table-bordered data-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Enable</th>
+                    <th>Date Create</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="gradeX">
+                    <td>Trident</td>
+                    <td>
+                        Internet
+                        Explorer 4.0
+                    </td>
+                    <td>Win 95+</td>
+                    <td class="center">4</td>
+                </tr>
+                <tr class="gradeC">
+                    <td>Trident</td>
+                    <td>
+                        Internet
+                        Explorer 5.0
+                    </td>
+                    <td>Win 95+</td>
+                    <td class="center">5</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Trident</td>
+                    <td>
+                        Internet
+                        Explorer 5.5
+                    </td>
+                    <td>Win 95+</td>
+                    <td class="center">5.5</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Trident</td>
+                    <td>
+                        Internet
+                        Explorer 6
+                    </td>
+                    <td>Win 98+</td>
+                    <td class="center">6</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Trident</td>
+                    <td>Internet Explorer 7</td>
+                    <td>Win XP SP2+</td>
+                    <td class="center">7</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Trident</td>
+                    <td>AOL browser (AOL desktop)</td>
+                    <td>Win XP</td>
+                    <td class="center">6</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Firefox 1.0</td>
+                    <td>Win 98+ / OSX.2+</td>
+                    <td class="center">1.7</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Firefox 1.5</td>
+                    <td>Win 98+ / OSX.2+</td>
+                    <td class="center">1.8</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Firefox 2.0</td>
+                    <td>Win 98+ / OSX.2+</td>
+                    <td class="center">1.8</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Firefox 3.0</td>
+                    <td>Win 2k+ / OSX.3+</td>
+                    <td class="center">1.9</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Camino 1.0</td>
+                    <td>OSX.2+</td>
+                    <td class="center">1.8</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Camino 1.5</td>
+                    <td>OSX.3+</td>
+                    <td class="center">1.8</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Netscape 7.2</td>
+                    <td>Win 95+ / Mac OS 8.6-9.2</td>
+                    <td class="center">1.7</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Netscape Browser 8</td>
+                    <td>Win 98SE+</td>
+                    <td class="center">1.7</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Netscape Navigator 9</td>
+                    <td>Win 98+ / OSX.2+</td>
+                    <td class="center">1.8</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Mozilla 1.0</td>
+                    <td>Win 95+ / OSX.1+</td>
+                    <td class="center">1</td>
+                </tr>
+                <tr class="gradeA">
+                    <td>Gecko</td>
+                    <td>Mozilla 1.1</td>
+                    <td>Win 95+ / OSX.1+</td>
+                    <td class="center">1.1</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
