--- a/Blog.Admin/Views/Account/ExternalLoginFailure.cshtml
+++ b/Blog.Admin/Views/Account/ExternalLoginFailure.cshtml
@@ -6,3 +6,4 @@
     <h2>@ViewBag.Title.</h2>
     <h3 class="text-danger">Unsuccessful login with service.</h3>
 </hgroup>
+@*@Html.Partial("ExternalLoginConfirmation")*@
