--- a/Blog.Admin/Views/Account/ForgotPassword.cshtml
+++ b/Blog.Admin/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,26 @@
 ﻿@model Blog.Admin.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Forgot your password";
+    Layout = "~/Views/Shared/_Login.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div id="loginbox">
+    @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { id = "recoverform", @class = "form-vertical", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <p class="normal_text">Nhập Email đã đăng ký vào bên dưới, chúng tôi sẽ gửi link xác nhận cấp mật khẩu mới cho bạn. </p>
+        <div class="controls">
+            <div class="main_input_box">
+                <span class="add-on bg_lo"><i class="icon-envelope"></i></span>
+                @Html.TextBoxFor(m => m.Email, new { id = "EmailRecover", @class = "form-control", placeholder = "E-mail address" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-actions">
+            <span class="pull-left"><a href="/Account/Login" class="flip-link btn btn-success" id="to-login">&laquo; Quay lại</a></span>
+            <span class="pull-right"><button id="confirmRecover" type="submit" class="btn btn-info">Xác nhận</button></span>
         </div>
-    </div>
-}
-
+    }
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
