--- a/Blog.Admin/Views/Account/Login.cshtml
+++ b/Blog.Admin/Views/Account/Login.cshtml
@@ -30,27 +30,12 @@
                 </div>
                 @Html.ValidationSummary()
                 <div class="form-actions">
-                    <span class="pull-left"><a href="#" class="flip-link btn btn-info" id="to-recover">Quên mật khẩu</a></span>
+                    <span class="pull-left"><a href="/Account/ForgotPassword" class="flip-link btn btn-info" id="to-recover">Quên mật khẩu</a></span>
                     <span class="pull-right"><button type="submit" class="btn btn-success">Đăng nhập</button></span>
                     <span class="pull-right"><a href="/Account/Register" class="flip-link btn btn-danger" id="to-register">Đăng ký</a></span>
                 </div>
                 @Html.AntiForgeryToken()
     }
-
-    <form id="recoverform" action="/Account/ForgotPassword" role="form" method="post" novalidate="novalidate" class="form-vertical">
-        @Html.AntiForgeryToken()
-        <p class="normal_text">Nhập Email đã đăng ký vào bên dưới, chúng tôi sẽ gửi link xác nhận cấp mật khẩu mới cho bạn. </p>
-        <div class="controls">
-            <div class="main_input_box">
-                <span class="add-on bg_lo"><i class="icon-envelope"></i></span><input id="Email" name="Email" type="text" placeholder="E-mail address" />
-            </div>
-        </div>
-        @Html.ValidationSummary()
-        <div class="form-actions">
-            <span class="pull-left"><a href="#" class="flip-link btn btn-success" id="to-login">&laquo; Quay lại</a></span>
-            <span class="pull-right"><button class="btn btn-info" type="submit">Xác nhận</button></span>
-        </div>
-    </form>
 
 </div>
 
