--- a/Blog.Admin/Views/Account/Register.cshtml
+++ b/Blog.Admin/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div id="loginbox">
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-vertical", role = "form" }))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-vertical", role = "form" ,id = "registerform" }))
     {
         @Html.AntiForgeryToken()
         <div class="control-group normal_text"> <h3><img src="~/Img/logo.png" alt="Logo" /></h3></div>
@@ -21,7 +21,7 @@
         <div class="control-group">
             <div class="controls">
                 <div class="main_input_box">
-                    <span class="add-on bg_lo"><i class="icon-user"></i></span>
+                    <span class="add-on bg_lo"><i class="icon-envelope"></i></span>
                     @Html.TextBoxFor(m => m.Email, new { value = "hoangbap1595@gmail.com", placeholder = "E-mail address" })
                     <br />@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                 </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-            @*@Html.ValidationSummary()*@
+            @Html.ValidationSummary()
             <div class="form-actions">
                 <span class="pull-left"><a href="/Account/Login" class="flip-link btn btn-success" id="to-login2">&laquo; Quay lại</a></span>
                 <span class="pull-right"><button class="btn btn-info" type="submit">Đăng ký</button></span>
