--- a/Blog.Admin/Views/Shared/Lockout.cshtml
+++ b/Blog.Admin/Views/Shared/Lockout.cshtml
@@ -2,9 +2,13 @@
 
 @{
     ViewBag.Title = "Locked Out";
+    Layout = "~/Views/Shared/_Login.cshtml";
 }
 
-<hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
-</hgroup>
+<div id="loginbox">
+    <hgroup>
+        <h3 class="text-danger">Truy cập thất bại.</h3>
+        <h5 class="text-danger">Tài khoản này đã bị khóa, Vui lòng thử lại sau.</h5>
+    </hgroup>
+    <span><a href="/Account/Login" class="flip-link btn btn-success" id="to-login2">&laquo; Quay lại trang đăng nhập</a></span>
+</div>
