--- a/Blog.Admin/Views/Shared/_Matrix.cshtml
+++ b/Blog.Admin/Views/Shared/_Matrix.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/ico" href="~/icon1.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - iTCoder.com</title>
