--- a/Blog.Admin/Areas/Blog/Views/Rules/Rules.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Rules/Rules.cshtml
@@ -4,4 +4,10 @@
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
 
+ <!--breadcrumbs-->
+<div id="content-header">
+    <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Rules" class="current">Rules</a> </div>
+</div>
+<!--End-breadcrumbs-->
+
 <h2>Rules Test</h2>
