--- a/Blog.Admin/Views/Manage/DashBoard.cshtml
+++ b/Blog.Admin/Views/Manage/DashBoard.cshtml
@@ -17,7 +17,6 @@
             <li class="bg_lb"> <a href="interface.html"> <i class="icon-folder-open"></i> Category</a> </li>
             <li class="bg_lg"> <a href="calendar.html"> <i class="icon-calendar"></i> Calendar</a> </li>
             <li class="bg_lr"> <a href="error404.html"> <i class="icon-lock"></i> Bans Account</a> </li>
-
         </ul>
     </div>
     <!--End-Action boxes-->
@@ -60,7 +59,6 @@
                     </ul>
                 </div>
             </div>
-
         </div>
         <div class="span6">
             <div class="widget-box">
@@ -140,4 +138,10 @@
     </div>
 </div>
 
-
+<div id="example"></div>
+<script>
+    $(document).ready(function () {
+        var oTable = $('#example').dataTable();
+        alert(oTable.fnVersionCheck('1.9.0'));
+    });
+</script>
