--- a/Blog.Admin/Areas/Blog/Views/Rules/Rules.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Rules/Rules.cshtml
@@ -3,11 +3,32 @@
     ViewBag.Title = "Rules";
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
+<style>
+    .widget-title {
+        background: #efefef;
+        border-bottom: 1px solid #CDCDCD;
+        height: 30px;
+    }
 
- <!--breadcrumbs-->
+        .widget-title span.icon {
+            padding: 0 !important;
+            float: left;
+            border-right: none !important;
+        }
+</style>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/Blog/Rules/rules.js"></script>
+<!--breadcrumbs-->
 <div id="content-header">
     <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Rules" class="current">Rules</a> </div>
 </div>
 <!--End-breadcrumbs-->
 
-<h2>Rules Test</h2>
+<div class="widget-box">
+    <div class="widget-title">
+        <button class="pull-right btn btn-default"><span class="icon"><i class="icon-plus"></i> </span> Thêm mới</button>
+    </div>
+    <div class="widget-content nopadding">
+        <table class="table table-bordered data-table-rules"></table>
+    </div>
+</div>
