--- a/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
+++ b/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
@@ -3,9 +3,29 @@
     ViewBag.Title = "Users";
     Layout = "~/Views/Shared/_Matrix.cshtml";
 }
+<style>
+    .widget-title {
+        background: #efefef;
+        border-bottom: 1px solid #CDCDCD;
+        height: 30px;
+    }
+
+        .widget-title span.icon {
+            padding: 0 !important;
+            float: left;
+            border-right: none !important;
+        }
+</style>
 <!--breadcrumbs-->
 <div id="content-header">
     <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Users" class="current">Users</a> </div>
 </div>
 <!--End-breadcrumbs-->
-
+<div class="widget-box">
+    <div class="widget-title">
+        <button class="pull-right btn btn-default"><span class="icon"><i class="icon-plus"></i> </span> Thêm mới</button>
+    </div>
+    <div class="widget-content nopadding">
+        <table class="table table-bordered" id="data-table-users"></table>
+    </div>
+</div>
