--- a/Blog.Admin/Areas/Blog/Views/Users/Users.cshtml
+++ b/Blog.Admin/Areas/Blog/Views/Users/Users.cshtml
@@ -16,6 +16,7 @@
             border-right: none !important;
         }
 </style>
+<script src="~/Scripts/Blog/users.js"></script>
 <!--breadcrumbs-->
 <div id="content-header">
     <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Users" class="current">Users</a> </div>
@@ -26,6 +27,6 @@
         <button class="pull-right btn btn-default"><span class="icon"><i class="icon-plus"></i> </span> Thêm mới</button>
     </div>
     <div class="widget-content nopadding">
-        <table class="table table-bordered data-table-users"></table>
+        <table class="table table-bordered" id="data-table-users"></table>
     </div>
 </div>
