--- a/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
+++ b/Blog.Users/Areas/Blog/Views/Users/Users.cshtml
@@ -16,6 +16,7 @@
             border-right: none !important;
         }
 </style>
+<script src="~/Scripts/Blog/users.js"></script>
 <!--breadcrumbs-->
 <div id="content-header">
     <div id="breadcrumb"> <a href="#" title="Go to DashBoard" class="tip-bottom"><i class="icon-home"></i> DashBoard</a> <a href="/Blog/Users" class="current">Users</a> </div>
