--- a/Blog.Rules/Areas/Blog/Views/Rules/Rules.cshtml
+++ b/Blog.Rules/Areas/Blog/Views/Rules/Rules.cshtml
@@ -29,6 +29,6 @@
         <button class="pull-right btn btn-default"><span class="icon"><i class="icon-plus"></i> </span> Thêm mới</button>
     </div>
     <div class="widget-content nopadding">
-        <table class="table table-bordered data-table-rules"></table>
+        <table class="table table-bordered" id="data-table-rules"></table>
     </div>
 </div>
